Barre de navigation _commit_2

--- a/qui_sommes_nous.html
+++ b/qui_sommes_nous.html
@@ -15,7 +15,79 @@
     <link rel="stylesheet" href="styles.css" />
   </head>
   <body>
-    <header></header>
+    <header>
+      <section>
+        <div class="container-fluid">
+          <div class="row">
+            <nav class="navbar navbar-expand-lg bg-body-tertiary">
+              <div class="container-fluid">
+                <a
+                  class="navbar-brand pt-0 fst-italic fs-5"
+                  href="index.html"
+                  style="font-weight: 700"
+                  ><span class="fs-1 text-success">E</span>ducation Pour Tous</a
+                >
+                <button
+                  class="navbar-toggler"
+                  type="button"
+                  data-bs-toggle="offcanvas"
+                  data-bs-target="#navbarSupportedContent"
+                  aria-controls="navbarSupportedContent"
+                  aria-expanded="false"
+                  aria-label="Toggle navigation"
+                >
+                  <span class="navbar-toggler-icon"></span>
+                </button>
+                <div
+                  style="width: 70%"
+                  class="offcanvas offcanvas-end d-flex flex-row-reverse"
+                  id="navbarSupportedContent"
+                >
+                  <div class="offcanvas-header mt-3" style="height: 30px">
+                    <button
+                      type="button"
+                      class="btn-close"
+                      data-bs-dismiss="offcanvas"
+                      aria-label="Close"
+                    ></button>
+                  </div>
+                  <div class="offcanvas-body">
+                    <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+                      <li class="nav-item">
+                        <a
+                          class="nav-link active"
+                          aria-current="page"
+                          href="index.html"
+                          >Accueil</a
+                        >
+                      </li>
+                      <li class="nav-item">
+                        <a
+                          class="nav-link active text-nowrap"
+                          href="qui_sommes_nous.html"
+                          >Qui sommes-nous</a
+                        >
+                      </li>
+                      <li class="nav-item">
+                        <a class="nav-link active text-nowrap" href="#"
+                          >Nous contacter</a
+                        >
+                      </li>
+                    </ul>
+                    <button
+                      class="btn btn-sm btn-success btn-navbar"
+                      type="submit"
+                    >
+                      Fair un don
+                    </button>
+                  </div>
+                </div>
+              </div>
+            </nav>
+          </div>
+        </div>
+      </section>
+    </header>
     <main></main>
     <footer></footer>
     <!-- js boostrap  -->
