Réalisation de la page qui sommes nous terminé _commit_3

--- a/qui_sommes_nous.html
+++ b/qui_sommes_nous.html
@@ -4,6 +4,14 @@
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <title>Education Pour Tous</title>
+    <!-- icones font awesome cdn -->
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css"
+      integrity="sha512-iecdLmaskl7CVkqkXNQ/ZH/XLlvWZOJyj7Yy7tcenmpD1ypASozpmT/E0iPtmFIB46ZmdtAc9eNBvH0H/ZpiBw=="
+      crossorigin="anonymous"
+      referrerpolicy="no-referrer"
+    />
     <!-- cdn boostrap -->
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css"
@@ -19,7 +27,9 @@
       <section>
         <div class="container-fluid">
           <div class="row">
-            <nav class="navbar navbar-expand-lg bg-body-tertiary">
+            <nav
+              class="navbar navbar-index bg-dark-subtle navbar-expand-lg position-fixed bg-body-tertiary"
+            >
               <div class="container-fluid">
                 <a
                   class="navbar-brand pt-0 fst-italic fs-5"
@@ -87,9 +97,286 @@
           </div>
         </div>
       </section>
+      <section>
+        <div>
+          <div class="">
+            <div class="image-container">
+              <img class="" src="img2.jpg" alt="Image 1" />
+              <img class="" src="img1.jpg" alt="Image 2" />
+              <img class="" src="img4.jpg" alt="Image 3" />
+              <img class="" src="img7.jpg" alt="Image 3" />
+            </div>
+          </div>
+        </div>
+      </section>
     </header>
-    <main></main>
-    <footer></footer>
+    <div class="wrapper d-lg-flex">
+      <main class="col-12 col-md-12 col-lg-7 mx-auto pb-5">
+        <section>
+          <div class="container qui-sommes-nous pb-3">
+            <div class="row">
+              <h2 class="pb-5">
+                Bienvenue sur le site de notre association Éducation pour Tous !
+              </h2>
+              <div class="">
+                <div class="card border-0 bg-success-subtle mb-3">
+                  <div class="row g-0">
+                    <div class="col">
+                      <div class="card-body">
+                        <h5 class="card-title">Notre mission</h5>
+                        <p class="card-text">
+                          Nous sommes une association à but non lucratif dédiée
+                          à l'éducation des enfants dans les quartiers
+                          défavorisés. Notre objectif principal est de
+                          contribuer à réduire les inégalités éducatives en
+                          offrant des opportunités d'apprentissage
+                          enrichissantes à tous les enfants, quelles que soient
+                          leurs origines socio-économiques. Convaincus que
+                          l'éducation est la clé pour un avenir meilleur, nous
+                          nous engageons à créer un environnement propice à
+                          l'épanouissement personnel et académique des jeunes.
+                        </p>
+                      </div>
+                    </div>
+                  </div>
+                </div>
+                <div class="card border-0 bg-info-subtle mb-3">
+                  <div class="row g-0">
+                    <div class="">
+                      <div class="card-body">
+                        <h5 class="card-title">Notre engagement</h5>
+                        <p class="card-text">
+                          À "Éducation pour Tous", nous croyons en l'égalité des
+                          chances pour tous les enfants. Nous travaillons sans
+                          relâche pour offrir un accès équitable à l'éducation,
+                          en comblant le fossé qui sépare les quartiers
+                          défavorisés des opportunités éducatives plus vastes.
+                          Nous sommes convaincus que chaque enfant mérite la
+                          chance de réaliser son potentiel et de poursuivre ses
+                          rêves, quels qu'ils soient.
+                        </p>
+                      </div>
+                    </div>
+                  </div>
+                </div>
+                <div class="card border-0 mb-3 bg-warning-subtle">
+                  <div class="row g-0">
+                    <div class="col">
+                      <div class="card-body">
+                        <h5 class="card-title">Comment vous pouvez aider</h5>
+                        <p class="card-text">
+                          En tant qu'association à but non lucratif, nous
+                          dépendons de la générosité de donateurs et de
+                          bénévoles pour réaliser notre mission. Si vous
+                          partagez notre passion pour l'éducation et l'égalité
+                          des chances, il existe de nombreuses façons de
+                          contribuer :
+                        </p>
+                        <p>
+                          <strong>Devenir bénévole:</strong> Vous pouvez vous
+                          impliquer en tant que mentor, tuteur, animateur
+                          d'ateliers ou pour aider lors de nos événements.
+                        </p>
+                        <p>
+                          <strong>Faire un don:</strong> Chaque contribution,
+                          quelle que soit sa taille, fait une différence. Votre
+                          don nous permettra de développer nos programmes et
+                          d'atteindre un plus grand nombre d'enfants.
+                        </p>
+                        <p>
+                          <strong>Partager notre cause:</strong> Aidez-nous à
+                          sensibiliser en parlant de notre association autour de
+                          vous et sur les réseaux sociaux.
+                        </p>
+                        <p>
+                          Ensemble, nous pouvons faire une réelle différence
+                          dans la vie des enfants issus de quartiers
+                          défavorisés. Rejoignez-nous dans notre mission
+                          d'offrir à chaque enfant une éducation équitable et
+                          des opportunités d'avenir prometteur.
+                        </p>
+                        <p>
+                          Merci pour votre soutien et votre engagement envers
+                          l'éducation pour tous !
+                        </p>
+                        <p class="card-text fst-italic">
+                          <small class="text-success fw-bold"
+                            >L'équipe "Éducation pour Tous</small
+                          >
+                        </p>
+                      </div>
+                    </div>
+                  </div>
+                </div>
+              </div>
+            </div>
+          </div>
+        </section>
+        <section>
+          <div class="container pb-5">
+            <div class="card text-center">
+              <div class="card-body">
+                <h5 class="card-title">
+                  Engagez-vous pour une Éducation Équitable !
+                </h5>
+                <p class="card-text">
+                  Ensemble, ouvrons les portes de l'éducation à tous les enfants
+                  et inspirons-les à poursuivre leurs rêves.
+                </p>
+                <a href="#" class="btn btn-success">S'engager</a>
+              </div>
+              <div class="card-footer text-body-secondary">
+                Education Pour Tous
+              </div>
+            </div>
+          </div>
+        </section>
+      </main>
+      <article class="col-md-12 col-lg-4 mx-auto">
+        <aside>
+          <div class="container">
+            <h2 class="pb-4">Nos actions</h2>
+            <div class="card border-0 bg-info-subtle mb-3">
+              <div class="row g-0">
+                <div class="col">
+                  <div class="card-body">
+                    <h5 class="card-title">Mentorat et Tutorat</h5>
+                    <p class="card-text">
+                      Nous mettons en place des programmes de mentorat et de
+                      tutorat, où des adultes bénévoles partagent leur expertise
+                      et leurs connaissances avec les enfants. Ces relations
+                      significatives favorisent l'apprentissage, l'estime de soi
+                      et l'orientation vers un avenir positif.
+                    </p>
+                  </div>
+                </div>
+              </div>
+            </div>
+          </div>
+          <div class="container">
+            <div class="card border-0 bg-danger-subtle mb-3">
+              <div class="row g-0">
+                <div class="col">
+                  <div class="card-body">
+                    <h5 class="card-title">
+                      Activités artistiques et culturelles
+                    </h5>
+                    <p class="card-text">
+                      Nous organisons des ateliers créatifs, des séances de
+                      théâtre, de musique, de danse et d'autres activités
+                      artistiques pour permettre aux enfants de développer leur
+                      créativité et leur confiance en eux.
+                    </p>
+                  </div>
+                </div>
+              </div>
+            </div>
+          </div>
+          <div class="container">
+            <div class="card mb-3 border-0 bg-secondary-subtle">
+              <div class="row g-0">
+                <div class="col">
+                  <div class="card-body">
+                    <h5 class="card-title">Accès aux ressources éducatives</h5>
+                    <p class="card-text">
+                      Nous mettons en place des bibliothèques communautaires,
+                      des salons du livre et des programmes d'accès aux
+                      ressources éducatives afin de stimuler l'amour de la
+                      lecture et de l'apprentissage chez les enfants.
+                    </p>
+                  </div>
+                </div>
+              </div>
+            </div>
+          </div>
+          <div class="container">
+            <div class="card border-0 bg-success-subtle mb-3">
+              <div class="row g-0">
+                <div class="col">
+                  <div class="card-body">
+                    <h5 class="card-title">Événements éducatifs</h5>
+                    <p class="card-text">
+                      Nous organisons des événements éducatifs tels que des
+                      visites de musées, des sorties pédagogiques et des séances
+                      d'orientation scolaire pour élargir les horizons des
+                      enfants et les inspirer.
+                    </p>
+                  </div>
+                </div>
+              </div>
+            </div>
+          </div>
+          <div class="container">
+            <div class="card border-0 bg-warning-subtle mb-3">
+              <div class="row g-0">
+                <div class="col">
+                  <div class="card-body">
+                    <h5 class="card-title">Soutien à la réussite scolaire</h5>
+                    <p class="card-text">
+                      Nous offrons un soutien scolaire personnalisé pour aider
+                      les enfants à surmonter leurs difficultés et à atteindre
+                      leurs objectifs académiques.
+                    </p>
+                  </div>
+                </div>
+              </div>
+            </div>
+          </div>
+        </aside>
+        <aside></aside>
+      </article>
+    </div>
+    <footer>
+      <section class="bg-light pt-4" style="margin-top: 100px">
+        <div class="container-fluid">
+          <div class="row">
+            <div class="col-sm-6 col-md-5">
+              <h5 class="m-3">Contact</h5>
+              <div class="m-3">
+                <address>
+                  <span><strong>Education Pour Tous</strong></span
+                  ><br />
+                  <span>0033 0 00 00 00 00</span><br />
+                  <span>00 Rue adress</span><br />
+                  <span>Marseille 13003 (France)</span>
+                </address>
+              </div>
+            </div>
+            <div class="col-sm-6 col-md-7">
+              <h5 class="m-3">Nos réseaux sociaux</h5>
+              <div class="content-social-media m-3">
+                <a
+                  class="fa-brands text-info fa-linkedin fa-2x m-2"
+                  title="LinkedIn"
+                  href="http://"
+                ></a>
+                <a
+                  class="fa-brands fa-facebook-square fa-2x m-2"
+                  title="Facebook"
+                  href="#"
+                ></a>
+                <a
+                  class="fa-brands text-danger fa-instagram-square fa-2x m-2"
+                  title="Instagram"
+                  href="http://"
+                ></a>
+                <a
+                  class="fa-brands text-info fa-twitter-square fa-2x m-2"
+                  title="Twitter"
+                  href="http://"
+                ></a>
+              </div>
+              <div class="pt-2 m-3 content-copirigtht">
+                <p style="font-size: 14px">
+                  &copy; 2023 educationpourtous. Tous droits réservés.
+                  <a class="" href="http://">Politique de confidentialité</a>.
+                </p>
+              </div>
+            </div>
+          </div>
+        </div>
+      </section>
+    </footer>
     <!-- js boostrap  -->
     <script
       src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"
