--- a/index.html
+++ b/index.html
@@ -4,6 +4,14 @@
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <title>Education Pour Tous</title>
+    <!-- icones font awesome cdn -->
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css"
+      integrity="sha512-iecdLmaskl7CVkqkXNQ/ZH/XLlvWZOJyj7Yy7tcenmpD1ypASozpmT/E0iPtmFIB46ZmdtAc9eNBvH0H/ZpiBw=="
+      crossorigin="anonymous"
+      referrerpolicy="no-referrer"
+    />
     <!-- cdn boostrap -->
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css"
@@ -19,7 +27,9 @@
       <section>
         <div class="container-fluid">
           <div class="row">
-            <nav class="navbar navbar-expand-lg bg-body-tertiary">
+            <nav
+              class="navbar bg-dark-subtle navbar-expand-lg position-fixed z-1 bg-body-tertiary"
+            >
               <div class="container-fluid">
                 <a
                   class="navbar-brand pt-0 fst-italic fs-5"
@@ -87,9 +97,71 @@
           </div>
         </div>
       </section>
+      <section>
+        <div class="">
+          <div class="">
+            <div class="image-container">
+              <img class="" src="img2.jpg" alt="Image 1" />
+              <img class="" src="img1.jpg" alt="Image 2" />
+              <img class="" src="img4.jpg" alt="Image 3" />
+              <img class="" src="img7.jpg" alt="Image 3" />
+            </div>
+          </div>
+        </div>
+      </section>
     </header>
     <main></main>
-    <footer></footer>
+    <footer>
+      <section class="bg-light pt-4" style="margin-top: 80px">
+        <div class="container-fluid">
+          <div class="row">
+            <div class="col-sm-6 col-md-5">
+              <h5>Contact</h5>
+              <div class="">
+                <address>
+                  <span><strong>Education Pour Tous</strong></span
+                  ><br />
+                  <span>0033 0 00 00 00 00</span><br />
+                  <span>00 Rue adress</span><br />
+                  <span>Marseille 13003 (France)</span>
+                </address>
+              </div>
+            </div>
+            <div class="col-sm-6 col-md-7">
+              <h5>Nos réseaux sociaux</h5>
+              <div class="content-social-media">
+                <a
+                  class="fa-brands text-info fa-linkedin fa-2x m-2"
+                  title="LinkedIn"
+                  href="http://"
+                ></a>
+                <a
+                  class="fa-brands fa-facebook-square fa-2x m-2"
+                  title="Facebook"
+                  href="#"
+                ></a>
+                <a
+                  class="fa-brands text-danger fa-instagram-square fa-2x m-2"
+                  title="Instagram"
+                  href="http://"
+                ></a>
+                <a
+                  class="fa-brands text-info fa-twitter-square fa-2x m-2"
+                  title="Twitter"
+                  href="http://"
+                ></a>
+              </div>
+              <div class="pt-2 content-copirigtht" style="font-size: 5px">
+                <p>
+                  &copy; 2023 educationpourtous. Tous droits réservés.
+                  <a class="" href="http://">Politique de confidentialité</a>.
+                </p>
+              </div>
+            </div>
+          </div>
+        </div>
+      </section>
+    </footer>
     <!-- js boostrap  -->
     <script
       src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"
