Ajout de la page faire un don + la page contact _commit_4

--- a/qui_sommes_nous.html
+++ b/qui_sommes_nous.html
@@ -79,17 +79,19 @@
                         >
                       </li>
                       <li class="nav-item">
-                        <a class="nav-link active text-nowrap" href="#"
+                        <a
+                          class="nav-link active text-nowrap"
+                          href="/nous_contacter.html"
                           >Nous contacter</a
                         >
                       </li>
                     </ul>
-                    <button
-                      class="btn btn-sm btn-success btn-navbar"
-                      type="submit"
+                    <a
+                      class="btn btn-success btn-navbar"
+                      href="fair-un-don.html"
                     >
                       Fair un don
-                    </button>
+                    </a>
                   </div>
                 </div>
               </div>
@@ -110,7 +112,7 @@
         </div>
       </section>
     </header>
-    <div class="wrapper d-lg-flex">
+    <div class="wrapper d-lg-flex" style="margin-top: 25%">
       <main class="col-12 col-md-12 col-lg-7 mx-auto pb-5">
         <section>
           <div class="container qui-sommes-nous pb-3">
