--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
         <div class="container-fluid">
           <div class="row">
             <nav
-              class="navbar bg-dark-subtle navbar-expand-lg position-fixed z-1 bg-body-tertiary"
+              class="navbar bg-dark-subtle navbar-expand-lg position-fixed z-3 bg-body-tertiary"
             >
               <div class="container-fluid">
                 <a
@@ -65,7 +65,7 @@
                     <ul class="navbar-nav me-auto mb-2 mb-lg-0">
                       <li class="nav-item">
                         <a
-                          class="nav-link active"
+                          class="nav-link active fw-semibold"
                           aria-current="page"
                           href="index.html"
                           >Accueil</a
@@ -73,23 +73,25 @@
                       </li>
                       <li class="nav-item">
                         <a
-                          class="nav-link active text-nowrap"
+                          class="nav-link active text-nowrap fw-semibold"
                           href="qui_sommes_nous.html"
-                          >Qui sommes-nous</a
+                          >Qui sommes-nous ?</a
                         >
                       </li>
                       <li class="nav-item">
-                        <a class="nav-link active text-nowrap" href="#"
+                        <a
+                          class="nav-link active text-nowrap fw-semibold"
+                          href="/nous_contacter.html"
                           >Nous contacter</a
                         >
                       </li>
                     </ul>
-                    <button
-                      class="btn btn-sm btn-success btn-navbar"
-                      type="submit"
+                    <a
+                      class="btn btn-success btn-navbar"
+                      href="fair-un-don.html"
                     >
                       Fair un don
-                    </button>
+                    </a>
                   </div>
                 </div>
               </div>
@@ -98,19 +100,347 @@
         </div>
       </section>
       <section>
+        <div class="container"></div>
+      </section>
+
+      <section>
         <div class="">
           <div class="">
-            <div class="image-container">
-              <img class="" src="img2.jpg" alt="Image 1" />
+            <div class="image-container z-2">
+              <img class="" src="img7.jpg" alt="Image 1" />
               <img class="" src="img1.jpg" alt="Image 2" />
               <img class="" src="img4.jpg" alt="Image 3" />
-              <img class="" src="img7.jpg" alt="Image 3" />
+              <img class="" src="img2.jpg" alt="Image 3" />
+              <span class="text-container">
+                <div class=""></div>
+                <p class="animated-text bg-info w-50 m-auto">Premier texte</p>
+                <p class="animated-text bg-warning w-50 m-auto">
+                  Deuxième texte
+                </p>
+                <p class="animated-text bg-success w-50 m-auto">
+                  Troisieme texte
+                </p>
+              </span>
             </div>
           </div>
         </div>
       </section>
     </header>
-    <main></main>
+    <main>
+      <!-- carrousel -->
+      <section>
+        <div class="container pt-5">
+          <div class="row">
+            <div
+              id="carouselExampleCaptions"
+              class="carousel slide col-md-5"
+              data-bs-ride="carousel"
+            >
+              <div class="carousel-indicators">
+                <button
+                  type="button"
+                  data-bs-target="#carouselExampleCaptions"
+                  data-bs-slide-to="0"
+                  class="active"
+                  aria-current="true"
+                  aria-label="Slide 1"
+                ></button>
+                <button
+                  type="button"
+                  data-bs-target="#carouselExampleCaptions"
+                  data-bs-slide-to="1"
+                  aria-label="Slide 2"
+                ></button>
+                <button
+                  type="button"
+                  data-bs-target="#carouselExampleCaptions"
+                  data-bs-slide-to="2"
+                  aria-label="Slide 3"
+                ></button>
+              </div>
+              <div class="carousel-inner">
+                <div class="carousel-item active">
+                  <img
+                    src="/img6.jpg"
+                    class="d-block w-100 img-fluid"
+                    alt="..."
+                  />
+                  <div class="carousel-caption d-none d-md-block">
+                    <h5>First slide label</h5>
+                    <p>
+                      Some representative placeholder content for the first
+                      slide.
+                    </p>
+                  </div>
+                </div>
+                <div class="carousel-item">
+                  <img
+                    src="/img8.jpg"
+                    class="d-block w-100 img-fluid"
+                    alt="..."
+                  />
+                  <div class="carousel-caption d-none d-md-block">
+                    <h5>Second slide label</h5>
+                    <p>
+                      Some representative placeholder content for the second
+                      slide.
+                    </p>
+                  </div>
+                </div>
+                <div class="carousel-item">
+                  <img
+                    src="/img2.jpg"
+                    class="d-block w-100 img-fluid"
+                    alt="..."
+                  />
+                  <div class="carousel-caption d-none d-md-block">
+                    <h5>Third slide label</h5>
+                    <p>
+                      Some representative placeholder content for the third
+                      slide.
+                    </p>
+                  </div>
+                </div>
+              </div>
+              <button
+                class="carousel-control-prev"
+                type="button"
+                data-bs-target="#carouselExampleCaptions"
+                data-bs-slide="prev"
+              >
+                <span
+                  class="carousel-control-prev-icon"
+                  aria-hidden="true"
+                ></span>
+                <span class="visually-hidden">Previous</span>
+              </button>
+              <button
+                class="carousel-control-next"
+                type="button"
+                data-bs-target="#carouselExampleCaptions"
+                data-bs-slide="next"
+              >
+                <span
+                  class="carousel-control-next-icon"
+                  aria-hidden="true"
+                ></span>
+                <span class="visually-hidden">Next</span>
+              </button>
+            </div>
+            <div class="col-md-6">
+              <div class="card-body">
+                <h5 class="card-title m-1">
+                  Ensemble, construisons un avenir meilleur grâce à l'éducation
+                  !
+                </h5>
+                <p class="card-text m-4">
+                  Rejoignez-nous lors de ces événements exceptionnels et
+                  contribuez à offrir aux enfants des quartiers défavorisés des
+                  opportunités d'apprentissage enrichissantes. Chaque
+                  participation compte, que vous souhaitiez devenir bénévole,
+                  faire un don ou simplement partager notre cause autour de
+                  vous.
+                </p>
+                <p class="m-4">
+                  Suivez-nous sur les réseaux sociaux pour rester informé des
+                  dernières mises à jour et événements à venir.
+                  <span class="fw-semibold text-primary"
+                    >#EducationPourTous #ÉducationÉquitable
+                    #EnfantsDuFutur</span
+                  >
+                </p>
+              </div>
+            </div>
+          </div>
+        </div>
+      </section>
+      <!-- evenementiel  -->
+      <section>
+        <div class="container pt-5">
+          <div class="row">
+            <div class="row row-cols-1 row-cols-md-3 g-4">
+              <div class="col">
+                <div class="card rounded-0 h-100">
+                  <!-- <img src="..." class="card-img-top" alt="..." /> -->
+                  <div class="card-body">
+                    <h5 class="card-title">Journée de la Découverte</h5>
+                    <p class="card-text">
+                      La Journée de la Découverte est une journée
+                      d'apprentissage ludique et interactif où les enfants
+                      auront l'occasion de participer à une variété d'ateliers
+                      passionnants. Des scientifiques, des artistes et des
+                      technologues bénévoles encadreront les enfants pour des
+                      activités pratiques qui stimuleront leur curiosité et leur
+                      créativité. De la création d'expériences scientifiques à
+                      la réalisation d'œuvres d'art, cette journée sera une
+                      source d'émerveillement et d'apprentissage pour tous !
+                    </p>
+                  </div>
+                  <div class="card-footer">
+                    <small class="text-body-secondary"
+                      >Marseille 05/08/2023</small
+                    >
+                  </div>
+                </div>
+              </div>
+              <div class="col">
+                <div class="card rounded-0 h-100">
+                  <div class="card-body">
+                    <h5 class="card-title">Fête de la Lecture</h5>
+                    <p class="card-text">
+                      La Fête de la Lecture célèbre le plaisir de la lecture et
+                      de l'écriture. Nous accueillerons des auteurs locaux et
+                      des conteurs pour des séances de lecture à voix haute
+                      captivantes. Les enfants auront également la possibilité
+                      de participer à des concours d'écriture créative et de
+                      présenter leurs propres histoires. La Fête de la Lecture
+                      vise à inspirer l'amour de la lecture chez les enfants et
+                      à renforcer leurs compétences en littératie.
+                    </p>
+                  </div>
+                  <div class="card-footer">
+                    <small class="text-body-secondary"
+                      >Last updated 3 mins ago</small
+                    >
+                  </div>
+                </div>
+              </div>
+              <div class="col">
+                <div class="card rounded-0 h-100">
+                  <div class="card-body">
+                    <h5 class="card-title">
+                      Rencontre avec les Métiers du Futur
+                    </h5>
+                    <p class="card-text">
+                      Cette journée spéciale permettra aux enfants de rencontrer
+                      des professionnels passionnés issus d'industries
+                      innovantes. Des experts des domaines de la technologie, de
+                      la santé, de l'environnement et bien d'autres présenteront
+                      leur travail, les dernières tendances et les opportunités
+                      d'avenir. Les jeunes auront ainsi l'occasion de se
+                      projeter dans des métiers émergents et de s'inspirer pour
+                      leur propre parcours professionnel.
+                    </p>
+                  </div>
+                  <div class="card-footer">
+                    <small class="text-body-secondary"
+                      >Last updated 3 mins ago</small
+                    >
+                  </div>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+      </section>
+      <section>
+        <div class="container pt-5">
+          <div class="row">
+            <div class="row row-cols-1 row-cols-md-3 g-4">
+              <div class="col">
+                <div class="card rounded-0 h-100">
+                  <div class="card-body">
+                    <h5 class="card-title">Ateliers d'Art Thérapie</h5>
+                    <p class="card-text">
+                      Nos ateliers d'art thérapie visent à utiliser l'expression
+                      artistique comme moyen de soutenir le développement
+                      émotionnel et psychologique des enfants. Des thérapeutes
+                      spécialisés guideront les enfants à travers des activités
+                      artistiques créatives pour les aider à exprimer leurs
+                      émotions, à développer leur estime de soi et à renforcer
+                      leur résilience.
+                    </p>
+                  </div>
+                  <div class="card-footer">
+                    <small class="text-body-secondary"
+                      >Last updated 3 mins ago</small
+                    >
+                  </div>
+                </div>
+              </div>
+              <div class="col">
+                <div class="card rounded-0 h-100">
+                  <div class="card-body">
+                    <h5 class="card-title">Chasse au Trésor Éducative</h5>
+                    <p class="card-text">
+                      Notre chasse au trésor est une aventure éducative
+                      passionnante où les enfants devront résoudre des énigmes,
+                      relever des défis intellectuels et participer à des jeux
+                      éducatifs pour trouver le trésor caché. Cette activité
+                      ludique renforce la collaboration, les compétences en
+                      résolution de problèmes et l'apprentissage tout en
+                      s'amusant.
+                    </p>
+                  </div>
+                  <div class="card-footer">
+                    <small class="text-body-secondary"
+                      >Last updated 3 mins ago</small
+                    >
+                  </div>
+                </div>
+              </div>
+              <div class="col">
+                <div class="card rounded-0 h-100">
+                  <div class="card-body">
+                    <h5 class="card-title">Visite Culturelle</h5>
+                    <p class="card-text">
+                      Explorez le monde de l'apprentissage en participant à
+                      notre visite culturelle le [date]. Nous visiterons un
+                      musée passionnant, un centre scientifique ou une ferme
+                      pédagogique pour stimuler la curiosité et la découverte.
+                    </p>
+                  </div>
+                  <div class="card-footer">
+                    <small class="text-body-secondary"
+                      >Last updated 3 mins ago</small
+                    >
+                  </div>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+      </section>
+      <section class="pt-5">
+        <div class="container d-flex pt-5">
+          <div class="vertical-line m-2"></div>
+          <p class="w-75">
+            Ces événements ne sont qu'un aperçu de notre engagement continu
+            envers l'éducation des enfants dans les quartiers défavorisés. Nous
+            organisons régulièrement d'autres activités éducatives, des sorties
+            culturelles et des projets communautaires pour créer un impact
+            positif et durable dans la vie des enfants que nous servons.
+            Rejoignez-nous lors de ces événements et ensemble, construisons un
+            avenir meilleur grâce à l'éducation ! Restez informé(e) en suivant
+            notre site et nos réseaux sociaux pour découvrir notre calendrier
+            complet d'événements. #ÉducationPourTous #Apprentissage
+            #EnfantsDuFutur
+          </p>
+        </div>
+        <div class="container">
+          <a
+            class="fa-brands text-info fa-linkedin fa-2x m-2"
+            title="LinkedIn"
+            href="http://"
+          ></a>
+          <a
+            class="fa-brands fa-facebook-square fa-2x m-2"
+            title="Facebook"
+            href="#"
+          ></a>
+          <a
+            class="fa-brands text-danger fa-instagram-square fa-2x m-2"
+            title="Instagram"
+            href="http://"
+          ></a>
+          <a
+            class="fa-brands text-info fa-twitter-square fa-2x m-2"
+            title="Twitter"
+            href="http://"
+          ></a>
+        </div>
+      </section>
+    </main>
     <footer>
       <section class="bg-light pt-4" style="margin-top: 80px">
         <div class="container-fluid">
